<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.activity.MainActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@drawable/round_button"
        android:onClick="onStartButtonClick"
        android:text="@string/startButton"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ListView
        android:id="@+id/resultListView"
        android:layout_width="354dp"
        android:layout_height="267dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/best_match_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/best_match"
        app:layout_constraintStart_toStartOf="@+id/excluded_devices_label"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="onSettingsClicked"
        android:text="@string/settingsButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/excluded_devices_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/excluded_devices"
        app:layout_constraintStart_toStartOf="@+id/resultListView"
        app:layout_constraintTop_toBottomOf="@+id/best_match_label" />

    <TextView
        android:id="@+id/best_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/best_match_label"
        app:layout_constraintTop_toTopOf="@+id/best_match_label" />

    <TextView
        android:id="@+id/excluded_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/excluded_devices_label"
        app:layout_constraintTop_toTopOf="@+id/excluded_devices_label" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/matches_in_areas"
        app:layout_constraintStart_toStartOf="@+id/resultListView"
        app:layout_constraintTop_toBottomOf="@+id/excluded_devices_label" />

</androidx.constraintlayout.widget.ConstraintLayout>